--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,3 +1,6 @@
+.card {
+  max-width: 500px;
+}
 .animate {
   transition: all 0.1s;
   -webkit-transition: all 0.1s;
@@ -9,7 +12,7 @@
   font-size: 18px;
   color: #fff;
   text-decoration: none;
-  margin-top: 30px;
+  margin-top: 25px;
 }
 .color {
   background-color: #587b7f;
