--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,10 +1,11 @@
 body {
   background-color: #fce6bd;
   background-image: url('../images/backgroud.jpg');
-  min-height: 100vh;
-  display: flex;
+  min-height: calc(100vh - 100px);
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #282c34;
   text-align: center;
+  position: relative;
+  padding-bottom: 100px; /* height of your footer */
 }
