--- a/src/templates/Newsletter.css
+++ b/src/templates/Newsletter.css
@@ -3,6 +3,7 @@
   position: absolute;
   bottom: 0;
   width: 100%;
+  margin: 0 auto;
 }
 
 .epicfont {
@@ -13,7 +14,7 @@
 }
 
 form {
-  display: flex;
+  display: inline-block;
   flex-direction: row;
   margin: 0;
   padding: 0;
